--- a/index.html
+++ b/index.html
@@ -13,64 +13,65 @@
 
     <!--Header-->
     <header>
-        <div>
-            <div>
-                <div>logo</div>
-                <nav>
-                    <a href="http://">link</a>
-                    <a href="http://">link</a>
-                    <a href="http://">link</a>
-                    <a href="http://">link</a>
-                    <a href="http://">link</a>
+        <div class="boxed">
+            <div class="flexcontainer" id="yellow">
+                <div class="border" id="logo">logo</div>
+                <nav class="border">
+                    <a href="http://">link&nbsp</a>
+                    <a href="http://">link&nbsp</a>
+                    <a href="http://">link&nbsp</a>
+                    <a href="http://">link&nbsp</a>
+                    <a href="http://">link&nbsp</a>
                 </nav>
-                <div>login</div>
+                <div class="border" id="login">login</div>
             </div>
         </div>
 
-        <div>
-            <div></div>
+        <div class="flexcontainer2 justifycontent-center" id="blue">
+            <div class="border" id="fucsia">
+            </div>
         </div>
 
     </header>
 
     <!--Main-->
     <main>
-        <div>
-            <div></div>
-            <div></div>
+        <div class="flexcontainer2 justifycontent-center">
+            <div class="azzurro border"></div>
+            <div class="rosa border"></div>
         </div>
 
-        <div>
-            <div></div>
-            <div></div>
+        <div class="flexcontainer2 justifycontent-center grigio">
+            <div class="rosa border"></div>
+            <div class="azzurro border"></div>
         </div>
 
-        <div>
-            <div></div>
-            <div></div>
+        <div class="flexcontainer2 justifycontent-center">
+            <div class="azzurro border"></div>
+            <div class="rosa border"></div>
         </div>
 
-        <div>
-            <div></div>
+        <div class="flexcontainer2 justifycontent-center grigio">
+            <div class="border" id="green"></div>
         </div>
     </main>
 
     <!--Footer-->
     <footer>
-        <div>
-            <div></div>
-            <div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+        <div class="flexcontainer2 justifycontent-center nero">
+            <div class="border" id="salmone"></div>
+            <div class="flexcontainer3">
+                <div class="b_white"></div>
+                <div class="b_white"></div>
+                <div class="b_white"></div>
+                <div class="b_white"></div>
             </div>
         </div>
 
-        <div>
-            <div>
-                <div>Logo</div>
-                <div>Bottone</div>
+        <div class="flexcontainer2 nero">
+            <div class="flexcontainer4 justifycontent-spacebetween" id="v_acqua">
+                <div class="rosa2 border">Logo</div>
+                <div class="rosa2 border">Bottone</div>
             </div>
         </div>
 
