--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
     <!--Header-->
     <header>
         <div class="boxed">
-            <div class="flexcontainer" id="yellow">
-                <div class="border" id="logo">logo</div>
-                <nav class="border">
+            <div class="flexcontainer" id="giallo">
+                <div class="bordo" id="logo">logo</div>
+                <nav class="bordo">
                     <a href="http://">link&nbsp</a>
                     <a href="http://">link&nbsp</a>
                     <a href="http://">link&nbsp</a>
                     <a href="http://">link&nbsp</a>
                     <a href="http://">link&nbsp</a>
                 </nav>
-                <div class="border" id="login">login</div>
+                <div class="bordo" id="login">login</div>
             </div>
         </div>
 
-        <div class="flexcontainer2 justifycontent-center" id="blue">
-            <div class="border" id="fucsia">
+        <div class="flexcontainer2 justifycontent-center" id="blu">
+            <div class="bordo" id="fucsia">
             </div>
         </div>
 
@@ -37,41 +37,41 @@
     <!--Main-->
     <main>
         <div class="flexcontainer2 justifycontent-center">
-            <div class="azzurro border"></div>
-            <div class="rosa border"></div>
+            <div class="azzurro bordo"></div>
+            <div class="rosa bordo"></div>
         </div>
 
         <div class="flexcontainer2 justifycontent-center grigio">
-            <div class="rosa border"></div>
-            <div class="azzurro border"></div>
+            <div class="rosa bordo"></div>
+            <div class="azzurro bordo"></div>
         </div>
 
         <div class="flexcontainer2 justifycontent-center">
-            <div class="azzurro border"></div>
-            <div class="rosa border"></div>
+            <div class="azzurro bordo"></div>
+            <div class="rosa bordo"></div>
         </div>
 
         <div class="flexcontainer2 justifycontent-center grigio">
-            <div class="border" id="green"></div>
+            <div class="bordo" id="verde"></div>
         </div>
     </main>
 
     <!--Footer-->
     <footer>
         <div class="flexcontainer2 justifycontent-center nero">
-            <div class="border" id="salmone"></div>
+            <div class="bordo" id="salmone"></div>
             <div class="flexcontainer3">
-                <div class="b_white"></div>
-                <div class="b_white"></div>
-                <div class="b_white"></div>
-                <div class="b_white"></div>
+                <div class="bordo_bianco"></div>
+                <div class="bordo_bianco"></div>
+                <div class="bordo_bianco"></div>
+                <div class="bordo_bianco"></div>
             </div>
         </div>
 
         <div class="flexcontainer2 nero">
             <div class="flexcontainer4 justifycontent-spacebetween" id="v_acqua">
-                <div class="rosa2 border">Logo</div>
-                <div class="rosa2 border">Bottone</div>
+                <div class="rosa2 bordo">Logo</div>
+                <div class="rosa2 bordo">Bottone</div>
             </div>
         </div>
 
